@@ -16,6 +16,8 @@ CHANGES IN VERSION 1.12.0-1.12.5
     o a new option '.progress' in `seqAlleleFreq()`, `seqMissing()` and
       `seqAlleleCount()`
 
+    o 'as.is' can be a `gdsn.class` object in `seqApply()`
+
 
 CHANGES IN VERSION 1.11.19-1.11.22
 -------------------------
